# Calculator

./: Диаграмма без названия.drawio
src/: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  calculator.ui  dialog.cpp  dialog.h  dialog.ui  instruction.tex  main.cpp
src/c/: Makefile
src/c/Main_logic/: s21_calc.c  s21_calc.h
src/c/Polish_notation/: s21_calculation.c  s21_calculation.h  s21_parser.c  s21_parser.h
src/c/Stacks/: s21_stack_char.c  s21_stack_char.h  s21_stack_double.c  s21_stack_double.h
src/c/Tests/: go_test.c  test.c  tests.h
